some code rearrangement done and some bug fixing introduced

--- a/validator/templates/validator/ismn_dialog.html
+++ b/validator/templates/validator/ismn_dialog.html
@@ -115,25 +115,6 @@
     //  to handle. Thus filtering should be done ommiting the bootstrap 'd-none' class;
 
 // Auxiliary functions:
-
-    function getDefaultParams(e){
-        var callerId = e.relatedTarget.id;
-        var hiddenId = callerId.replace(/_link$/, '_params');
-        var default_values = $('#'+hiddenId).val();
-        var ismnDialog = $(e.currentTarget);
-        ismnDialog.find('#id_target_hidden_input_depth').val(hiddenId); // remember where the selected depths need to go
-        return default_values
-    }
-
-    function getDefaultRanges(e){
-        var default_val = getDefaultParams(e);
-        var range = default_val.split(',');
-        $('#depth_from').val(parseFloat(range[0]));
-        $('#depth_to').val(parseFloat(range[1]));
-        range = [$('#depth_from').val(), $('#depth_to').val()];
-        return range
-    }
-
     function toggle_children_class(element, class_name){
         $(element).toggleClass(class_name);
         $.each($(element).find("*"), function(id, child){
@@ -322,27 +303,50 @@
     });
 
 // ------------------------ ISMN Depths -------------------------------------- //
-    function setISMNDepth(source) {
-        var ismnDialog = $(source).closest('#ismn_depth');
-        var hiddenId = ismnDialog.find('#id_target_hidden_input_depth').val();
-        var default_values = $('#'+hiddenId).val().split(',');
-        var depthCheckbox = $('#'+hiddenId).siblings('input:checkbox');
+function setISMNDepth(source) {
+    var ismnDialog = $(source).closest('#ismn_depth');
+    var hiddenId = ismnDialog.find('#id_target_hidden_input_depth').val();
+    // taking default values from the hidden field
+    var default_values = $('#'+hiddenId).val().split(',')
+    var depthCheckbox = $('#'+hiddenId).siblings('input:checkbox')
 
-        var depth_from = $('#depth_from').val();
-        var depth_to = $('#depth_to').val();
-        var range = [depth_from, depth_to];
-        if(depth_from > depth_to){
-            $('#'+hiddenId).val(default_values);
-            alert('"Depth from" value is higher than "Depth to". Choose another range or values will be set to the default ones (0.00-0.10 m).')
-        } else {
-          depthCheckbox.prop('checked', true)
-          $('#ismn_depth').modal('hide'); // closing the window
-        }
+    //taking chosen values
+    var depth_from = $('#depth_from').val()
+    var depth_to = $('#depth_to').val()
+    if(depth_from > depth_to){
+        $('#depth_from').val(parseFloat(default_values[0]))
+        $('#depth_to').val(parseFloat(default_values[1]))
+        alert('"Depth from" value is higher than "Depth to". Choose another range or values will be set to the last valid range used.')
+    } else {
+      depthCheckbox.prop('checked', true)
+      $('#'+hiddenId).val([depth_from, depth_to])
+      $('#ismn_depth').modal('hide'); // closing the window
     }
 
-    $('#ismn_depth').on('show.bs.modal', function(e){
-        getDefaultRanges(e);
-    });
+
+}
+
+function getDefaultParams(e, field_selector){
+    var callerId = e.relatedTarget.id;
+    var hiddenId = callerId.replace(/_link$/, '_params');
+    var default_values = $('#'+hiddenId).val()
+    var ismnDialog = $(e.currentTarget);
+    ismnDialog.find(field_selector).val(hiddenId); // remember where the selected depths need to go
+    return default_values
+}
+
+function getDefaultRanges(e){
+    var default_val = getDefaultParams(e, '#id_target_hidden_input_depth')
+    var range = default_val.split(',')
+    $('#depth_from').val(parseFloat(range[0]))
+    $('#depth_to').val(parseFloat(range[1]))
+    range = [$('#depth_from').val(), $('#depth_to').val()]
+    return range
+}
+
+$('#ismn_depth').on('show.bs.modal', function(e){
+  getDefaultRanges(e)
+});
 
 
 </script>
