--- a/validator/templates/validator/ismn_dialog.html
+++ b/validator/templates/validator/ismn_dialog.html
@@ -83,14 +83,12 @@
                 <div>
                     <div></div>
                         <label for="depth_from">Depth from: </label>
-                        <input class="depth_range form-control" id="depth_from" value="" type="number" name="depth_from"
-                            onchange="toggleISMNContinent(this)" step="0.01" min="0.00">
+                        <input class="depth_range form-control" id="depth_from" value="" type="number" name="depth_from" step="0.01" min="0.00">
                         <label for="depth_from">m</label>
                     </div>
                     <div>
                         <label for="depth_to">Depth to: </label>
-                        <input class="depth_range form-control" id="depth_to" value="" type="number" name="depth_to"
-                            onchange="toggleISMNContinent(this)" step="0.01" min="0.00">
+                        <input class="depth_range form-control" id="depth_to" value="" type="number" name="depth_to" step="0.01" min="0.00">
                         <label for="depth_to">m</label>
                     </div>
 
