--- a/validator/static/css/service.css
+++ b/validator/static/css/service.css
@@ -156,3 +156,8 @@ div.plot_div {
     width: 100%;
     height: 10%;
 }
+
+#user_info {
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+}
